# PROYECTO_FINAL_DIGITALES_3

./: .gitignore  AudioTest.rar  CMakeLists.txt  LCD.h  SD.c  audio_player.c  audio_player.h  botones.h  button_controller.h  hw_config.c  hw_config.h  i2s_output.c  i2s_output.h  input_buttons.c  instrument_ui.c  instrumentos.h  lcd.c  mpu6050.c  mpu6050.h  readme.md  readme.txt  sd_manager.c  sd_manager.h  sistema.h  test_audio_SD_DMA.c
Audio/: Audio.c  CMakeLists.txt  audio_dma.h  i2s.c  i2spio
AudioTest/: CMakeLists.txt  audio_test.c  i2s_tx.pio
LCD/: CMakeLists.txt  LCD.c  LCD.h  botones.h  buttons.c  buttons.h  instrumentos.h  sistema.h
Sonido/: Audio.c  CMakeLists.txt  i2s.h  i2s.pio
audio_sd_testo/: .gitignore  CMakeLists.txt  audio_player.c  audio_player.h  button_controller.c  button_controller.h  hw_config.c  hw_config.h  i2s_output.c  i2s_output.h  i2s_tx.pio  mpu6050.c  mpu6050.h  sd_manager.c  sd_manager.h  test_audio_SD_DMA.c
